# music-studio

./: .gitignore  404.html  README.md  capacitor.config.ts  eslint.config.js  index.html  manifest.webmanifest  package-lock.json  package.json  playwright.config.ts  sw.js  vite.config.ts
.cursor/plans/: latin-reggae-beat-sources.plan.md  metronome-pulse-visuals.plan.md
.github/workflows/: deploy-pages.yml  pages-verify.yml
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
assets/: index-B9kOO_89.js  index-CmeV3zCv.js  index-DWwIw6IW.css  index-qrDcLVXu.css
backend/: README.md  pyproject.toml
backend/app/: audio_viz.py  main.py
cricket-api/: README.md  main.py  processing.py  requirements.txt
cricket-api/llm/: __init__.py  narrative.py
cricket-api/rules/: __init__.py  engine.py
cricket-api/tests/: test_rules_engine.py
cricket-api/vision/: __init__.py  coco_keypoints.py  pipeline.py
docs/: guitar-samples.md  metronome.md
e2e/: readme-screenshots.spec.ts
fusion/: README.md  main.py  requirements.txt
scripts/: calibrate-metronome-levels.ts  copy-github-pages-404.mjs  generate-pwa-icons.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/components/: Home.tsx  Metronome.tsx  MusicFusionLab.tsx
src/data/: devAudioGraphManifest.ts  guitarStrumPatterns.ts
src/hooks/: useFixedMenuPosition.ts
src/lib/: supabase.ts  themes.ts
src/store/: useMatchStore.ts
src/utils/: metronomeAccent.ts  metronomeAudio.ts
supabase/migrations/: 20260410132105_cricket_ai_analysis_schema.sql
(+40 files in other folders)
