[project]
name = "sonic-lab-backend"
version = "0.1.0"
description = "FastAPI backend for the Sonic Fingerprint Lab"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "librosa>=0.10.2",
    "numpy>=1.26.0",
    "matplotlib>=3.9.0",
    "scipy>=1.13.0",
    "soundfile>=0.12.1",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
